--- a/ng-fundamentals/src/app/events/create-event.component.html
+++ b/ng-fundamentals/src/app/events/create-event.component.html
@@ -27,9 +27,11 @@
             <input [(ngModel)]="price" name="price" required id="eventPrice" type="text" type="number" class="form-control"
                 placeholder=" price..." />
         </div>
-        <div ngModelGroup="location">
+
+        <div ngModelGroup="location" #locationGroup="ngModelGroup" validateLocation>
             <div class="form-group">
                 <label for="address">Event Location:</label>
+                <em *ngIf="locationGroup?.invalid && locationGroup?.touched">you must enter either the full address or a website</em>
                 <input [(ngModel)]="address" name="address" id="address" type="text" class="form-control"
                     placeholder="Address of ..." />
             </div>
@@ -47,8 +49,9 @@
         <div class="form-group">
             <label for="onlineUrl">Online Url:</label>
             <input [(ngModel)]="onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control"
-                placeholder="Online Url..." />
+                placeholder="Online Url..."  (change)="locationGroup.control.controls.address.updateValueAndValidity()"/>
         </div>
+
         <div class="form-group" [ngClass]="{'error': newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched}">
             <label for="imageUrl">Image:</label>
             <em *ngIf="newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched && newEventForm.controls.imageUrl?.errors.required">Required</em>
@@ -61,5 +64,6 @@
 
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" [disabled]="newEventForm.invalid" class="btn btn-default" (click)="cancel()">Cancel</button>
+    
     </form>
 </div>
