--- a/ng-fundamentals/src/app/events/event-details/session-list.component.html
+++ b/ng-fundamentals/src/app/events/event-details/session-list.component.html
@@ -1,4 +1,7 @@
 <div class="row" *ngFor="let session of visibleSessions">
+    <div class="col-md-1" *ngIf="auth.isAuthenticated()">
+        <upvote (vote)="toggleVote(session)" [count]="session.voters.length" [voted]="userHasVoted(session)"></upvote>
+    </div>
     <div class="col-md-10">
       <collapsable-well [title]="session.name">
         <div well-title>
